update final draft

--- a/code/final_draft.Rmd
+++ b/code/final_draft.Rmd
@@ -16,57 +16,57 @@ Hao Jiang (hjiang266)
 
 # Introduction
 
-In this project, we are focusing on Fashion Product Images Dataset, which contains 44440 high-res product image files. Our purpose is to build a classifier based on CNN (Convolutional Neural Network), which can predict the category of a product by using its image. We use CHTC to improve the computational efficiency.
+In this project, we are focusing on Fashion Product Images Dataset, which contains 44440 high-res product image files. Our purpose is to build a classifier based on CNN (Convolutional Neural Network), which can predict the category of a product by using its image. We use CHTC to improve the computational efficiency. To get an overall insight into the dataset and methodology feasibility, we show our workflow here (Figure 1).
 
-To get an overall insight into the dataset and methodology feasibility, we performed our workflow here (Figure 1).
+![Workflow](../figures/workflow.png){width=90%}
 
-![Workflow](../figures/workflow.png)
-
-Detailly, we first pre-pressed the image on CHTC to get dimensional reduced, grayscale image for model training. After that, we split the set into training set (60%), validation set (30%), and test set(10%). We use parallel computation on CHTC to fit multiple CNN models under LeNet5 architecture with different hyperparameters on the training set to get an insight into what the hyperparameters should be used, and prepare for the larger scale hyperparameter tuning in the future.
+In general, we first preprocessed the image on CHTC to get dimensional reduced, grayscale image for model training. Then, we split these images into training set (60%), validation set (30%), and test set(10%). After that, we used parallel computation on CHTC to fit multiple CNN models under LeNet5 architecture with different hyperparameters on the training set in order to find the best hyperparameter combination. The accuracy of our final model on test set is 88%.
 
 # Data Description
 
-The dataset is sourced from Kaggle, which could be downloaded from [here](http://www.kaggle.com/paramaggarwal/fashion-product-images-dataset). 
+The dataset is sourced from Kaggle, which could be downloaded from http://www.kaggle.com/paramaggarwal/fashion-product-images-dataset. 
 
-This dataset contains professionally shot high resolution product images, and multiple label attributes describing the product which was manually entered while cataloging. More detailly, there're 44440 .jpg image files with fashion product, which could all be read into R as a $2400 \times 1800 \times 3$ dimensional array, where 2400 and 1800 represent the pixals in width and height respectively, 3 represent the RGB kernel for the image. For each image file, the product is centrally distributed. For image files in the same class, products share similar features. This ensures the feasibility of machine learning algorithms. Additionally, there's a style.csv file with multiple label attributes of the products: **gender, masterCategory, subCategory, articleType, baseColour, season, year, usage, product name**, which are extracted from the .josn metadata crawled from the internet. 
+This dataset contains professionally shot high resolution product images, and multiple label attributes describing the product. More detailly, there're 44440 .jpg image files with fashion product, which could all be read into R as a $2400 \times 1800 \times 3$ dimensional array, where 2400 and 1800 represent the pixals in width and height respectively, 3 represent the RGB kernel for the image. For each image file, the product is centrally distributed. For image files in the same class, products share similar features. This ensures the feasibility of machine learning algorithms. Additionally, there's a style.csv file with multiple label attributes of the products: **gender, masterCategory, subCategory, articleType, baseColour, season, year, usage, product name**, which are extracted from the .josn metadata crawled from the internet. 
 
-To perform image classification, we used articleType as category. It contains 144 classes in total, which are detailed product categories people usually refer to such as **Tshirts, Shirts, Shorts and Watches, etc.** We intended to drop categories whose count are less than 500 and finally got 32618 images in 22 classes.
+To perform image classification, we used **articleType** as category. It contains 144 classes in total, which are detailed product categories people usually refer to such as **Tshirts, Shirts, Shorts and Watches, etc.** We dropped categories whose counts are less than 500 and finally got 32618 images in 22 classes.
 
 
 ## Preparation
 
 ### Environment Preparation 
 
-Both R and Python are used for different purposes in this project. R is installed with package OpenImageR to pre-process the images and Python is installed with several essential packages (numpy, torch, pandas, torchvision, PIL) to build a neural network. Therefore, two interactive jobs were created to first download necessary files, then to install packages and finally return built files for R and Python respectively. We have learned about how to build R environment in class. To build up the Python environment, we followed the [CHTC Python instruction](https://chtc.cs.wisc.edu/python-jobs.shtml). More details can be found in the illustration below (Figure 2):
+Both R and Python are used for different purposes in this project. R should be installed with package OpenImageR to preprocess the images and Python should be installed with several essential packages (numpy, torch, pandas, torchvision, PIL) to build a neural network. Therefore, two interactive jobs were created to first download necessary files, then install packages and finally return built files for R and Python respectively. We have learned about how to build R environment in class. To build up the Python environment, we followed the CHTC Python instruction[1]. More details can be found in the illustration below (Figure 2):
 
-![Building Python Environment](../figures/CHTC_Env.png){width=50%}
+![Building Python Environment](../figures/CHTC_Env.png){width=60%}
 
-### Image Pre-pocessing
+### Image Preprocessing
 
 In this step, we use R and OpenImageR package to convert original images into $32 \times 32$ grayscale images.
 
 1. **Grayscale**  
-Since we will be mostly deal with the shape of the clothing, we first convert the colored images with 3 RGB channels into black and white images with only one single channel. Through function:
+Since we will be mostly deal with the shape of the clothing, we first convert the colored images with 3 RGB channels into black and white images with only one single channel, through function:
 $$Y_{Linear} = 0.2126*R_{Linear}+0.7152*G_{Linear}+0.0722B_{Linear}$$
 
 2. **Dimensional reduction**  
-Original number of pixels of an image is beyond the computational power of PC and even hard for high-performance clusters. Thus, we reduced the dimension of the images. We decided on $32 \times 32$, because it contains sufficient information about the shape and is a reasonable number of pixels to fit models.
+Original number of pixels for an image is beyond the computational power of PC and even hard for high-performance clusters. Thus, we reduced the dimension of the images. We decided on $32 \times 32$, because it contains sufficient information about the shape and won't lead to a huge computational burden.
 
-To complete image pre-processing efficiently, we divided and compressed all 44440 images into 59 .tgz files, then used CHTC to process these 59 .tgz files in parallel. More details can be found in the illustration below (Figure 3):
+To complete image preprocessing efficiently, we divided and compressed all images into 59 .tgz files, then used CHTC to process these 59 .tgz files in parallel. More details can be found in the illustration below (Figure 3):
 
-![Images Pre-processing](../figures/CHTC_Cvt_Img.png){width=50%}
+![Images Preprocessing](../figures/CHTC_Cvt_Img.png){width=60%}
+
+After that, we split all 32618 images into training set (60%), validation set (30%), and test set(10%).
 
 ## CNN Model
 
 CNN is perfectly fitted for image data since it needs no flatten, can handle multi-dimensional matrix (like RGB image data), and performs exceptionally well in large datasets. A CNN model often contains dozens of hyperparameters, and there are millions of hyperparameter combinations. Even on CHTC, it is impossible to traverse all the hyperparameters and find the best model. Therefore, we decided to set several levels for each hyperparameter, and use random search to find high-performance combination.
 
-More detailly, we built a CNN model with the structures of 2 Convolution Layer, 2 Max-Pooling Layer, and 5 FC Layer with LeNet rule, then ran parallel jobs on CHTC with the random selected hyperparameters from the table and compare their accuracy on validation set. Finally, we got a summarization of the performance for different hyperparameters.
+More detailly, we built a CNN model with the structures of 2 Convolution Layer, 2 Max-Pooling Layer, and 5 FC Layer with LeNet rule, then ran parallel jobs on CHTC with the random selected hyperparameters from the table and compare their accuracy on validation set. Finally, we could get a summarization of the performance for different hyperparameters.
 
 The structure of our neural network is described below:
 
 1. **Convolution Layer and Max-Pooling Layer**  
-We selected kernel 1 as a $K_1 \times K_1 \times 1$ matrix. With the Kernel Size = $N_1$ and Stride Length = 1 in the first Convolution Layer, we got $N_1$ channels of $32 \times 32$ matrix through valid padding. After that, the Max-Pooling Layer halved the pixels in each channel to decrease computational power. This is achieved and as the kernel moves through the matrix with Stride Value = 1, the computer returns the maximum value from the portion of the image covered by the Pooling Kernel each time.  
-In the second Convolution Layer, with a Kernel Size = $N_2$ and Stride Length = 1, we got $N_2$ channels of $16 \times 16$ matrix through valid padding. The second Max-Pooling Layer is applied after that to finalize our dataset to be $8 \times 8 \times N_2$. 
+We selected kernel 1 as a $K_1 \times K_1$ matrix. With the Kernel Size = $N_1$ and Stride Length = 1 in the first Convolution Layer, we got $N_1$ channels of $32 \times 32$ matrix through valid padding. After that, the Max-Pooling Layer halved the pixels in each channel to decrease computational power. This is achieved and as the kernel moves through the matrix with Stride Value = 1, the computer returns the maximum value from the portion of the image covered by the Pooling Kernel each time.  
+In the second Convolution Layer, with a Kernel Size = $N_2$ and Stride Length = 1, we got $N_2$ channels of $16 \times 16$ matrix through valid padding. The second Max-Pooling Layer is applied after that to transform the previous result into $8 \times 8 \times N_2$. 
 
 2. **Fully Connected Layer**  
 Now that we have converted the image into multi-channels from our Multi-level Perceptron, we can flatten it into a column vector and go through two hidden layers with dimension $H_1$ and $H_2$. Over a series of epochs using **LeNet5**, the model can distinguish the domain features and classify them through **Softmax** method.
@@ -78,13 +78,13 @@ In this part, we did hyperparameter tuning by random search. In our first draft,
 
 The following figure illustrate how we get all accuracy for 3000 hyperparameter combinations in parallel by using CHTC (Figure 4).
 
-![Hyperparameter tuning](../figures/CHTC_CNN.png){width=50%}
+![Hyperparameter tuning](../figures/CHTC_CNN.png){width=60%}
 
 More details will be introduced in the following.
 
 ## First Try
 
-After building up the CNN model in Python, we used CHTC to do hyperparameter tuning efficiently. The following table shows the range of each hyperparameter in our first draft:
+After building up the CNN model in Python, we used CHTC to do hyperparameter tuning efficiently[2]. The following table shows the range of each hyperparameter in our first draft:
 
 | Hyperparameter | Annocatation | Value |
 |---|:---:|:---:|
@@ -146,7 +146,11 @@ ggplot(filter_num2,aes(x=filter_num2,y=validation_accuracy)) +
             axis.text = element_text(size=12),
             axis.title = element_text(size=14),
             legend.title = element_text(size=14,face="bold"))
+```
 
+\newpage
+
+```{r, echo=FALSE, fig.show="hold", out.width="42%", fig.align = "center"}
 lrate = tapply(acc$`validation_accuracy`, acc$learning_rate,mean)
 lrate = data.frame(learning_rate = factor(names(lrate),levels = c(0.001,0.003,0.01,0.03)),
                    validation_accuracy = lrate, group="")
@@ -186,6 +190,7 @@ ggplot(batch_size,aes(x=batch_size,y=validation_accuracy)) +
 
 ```
 
+We get an insight into the importance of hyperparameters through ANOVA, assigning each hyperparameter as an effect.[3] With the main effects and second level interactions included, we got 36 effects and evaluated their significance through Bonferroni Correction, that is, extracting all terms with $p < 0.05/36 = 0.0013$ as significant. It turns out that 18 out of 36 effects are significant, suggesting our hyperparameter tuning is meaningful. Therefore, we decided to perform a second hyperparameter tuning on finer and more reasonable divisions and larger intervals.
 
 ## New Design
 
@@ -206,7 +211,7 @@ This time, we randomly generated 3000 different combinations of hyperparameters.
 
 The whole process took about 8 hours. After all jobs have been completed, we compared their validation accuracy. The highest validation accuracy in all 3000 models is 88.36%, with training time 2996s. The corresponding hyperparameters combination is filter_num1=16, kernel_size1=3, filter_num2=80, kernel_size2=5, hidden_layer1=200, hidden_layer2=40, learning_rate=0.0005 and batch_size=64.
 
-Note that: if we focus on models with validation accuracy larger than 88% and order them by running time, we could find the model with highest training accuracy also took the longest training time among them. Therefore, if we'd like to consider trade-off of time, it's also a good idea to choose another model with validation accuracy 88.00% and training time 1168s. The corresponding hyperparameters combination is filter_num1=12, kernel_size1=3, filter_num2=64, kernel_size2=3, hidden_layer1=120, hidden_layer2=60, learning_rate=0.002 and batch_size=256. In this way, we can save about 2/3 of the training time.
+Note that: if we focus on models with validation accuracy larger than 88% and order them by running time, we could find that the model with highest training accuracy also took the longest training time among them. Therefore, if we'd like to consider trade-off of time, it's also a good idea to choose another model with validation accuracy 88.00% and training time 1168s. The corresponding hyperparameters combination is filter_num1=12, kernel_size1=3, filter_num2=64, kernel_size2=3, hidden_layer1=120, hidden_layer2=60, learning_rate=0.002 and batch_size=256. In this way, we can save about 2/3 of the training time.
 
 Here we also provide several examples to illustrate how hyperparameters can affect model performance. We only consider data with accuracy greater than 30%. 
 
@@ -291,12 +296,11 @@ ggplot(batch_size,aes(x=batch_size,y=validation_accuracy)) +
 
 ```
 
-Based on these plots, we can find 8 hyperparameters with highest average validation accuracy. However, compared with our final models, the combination of these hyperparameters leads to a lower validation accuracy 87.51%. Therefore, the relationship among hyperparameters and validation accuracy is very complex. This confirms the necessity of random search in hyperparameter tuning.
-
+Based on these plots, we can find 8 hyperparameters with highest average validation accuracy. However, compared with our final models, the combination of these hyperparameters leads to a lower validation accuracy 87.51%. Therefore, the relationship between hyperparameters and validation accuracy is very complex. This confirms the necessity of random search in hyperparameter tuning.
 
 ## Final Model
 
-By using CHTC, we figured out the best combination of hyperparameters among 3000 candidates efficiently. Then, We fitted a final model with data in both training and validation sets based on these hyperparameters, and use the **"secret"** test dataset to evaluate the perfermance of this model.
+By using CHTC, we figured out the best combination of hyperparameters among 3000 candidates efficiently. Then, We fitted a final model with data in both training and validation sets based on these hyperparameters, and use the test dataset has not been used before to evaluate the perfermance of this model.
 
 ```{r, echo=FALSE, out.width = '55%', fig.align = "center"}
 acc1<-c(75.439, 83.471, 86.905, 88.762, 90.438, 92.298, 91.954, 94.331, 94.941, 95.667, 97.057, 97.166, 97.012, 98.062, 98.607)/100
@@ -304,28 +308,28 @@ acc2<-c(75.238, 82.378, 84.707, 85.749, 85.933, 86.853, 86.424, 86.577, 87.251, 
 plot(1:15, acc1, type="l", col="blue", ylim=c(0.7, 1), cex.lab=1.2, cex.main=1.2, lty=2, 
      main="Accuracy in each Epoch",
      xlab="Epoch", ylab="Accuracy", lwd=2)
-abline(h=0.88140, col="gray", lty=3, lwd=1.5)
+abline(h=0.88140, col="grey", lty=3, lwd=2)
 lines(1:15, acc2, type="l", col="red", lwd=2, lty=1)
 legend("bottomright", legend=c("Training accuracy", "Test accuracy"),
        col=c("blue", "red"), lty=c(2, 1), cex=1.2)
 ```
 
 
-The accuracy plot showed that: As the number of epoch increasing, the training accuracy kept increasing and was approaching to 100%, while the test accuracy also kept increasing at first but stabilized at about 88%. It proved that our final model has a good performance on product images classification.
+The accuracy plot shows that: As the number of epoch increasing, the training accuracy keep increasing and is approaching to 100%, while the test accuracy also keep increasing at first but stabilize at about 88%. It prove that our final model has a good performance on product images classification.
+
 
 # Conclusion
 
-In this project, we build a classifier based on CNN, which can predict the category of a product by using its image. By using CHTC, we boost up our pipeline at 2 steps: 1. data preprocessing for more than 40 thousand images. 2. hyperparameter tuning among 3 thousand combinations. The tasks in each step are independent and time-consuming, so there is no doubt that parallel computing is a great method to save our time. The accuracy of our final model is about 
+In this project, we build a classifier based on CNN, which can predict the category of a product by using its image with accuracy more than 88%. By using CHTC, we speed up our pipeline in 2 steps: 1. data preprocessing for more than 30 thousand images. 2. hyperparameter tuning among 3 thousand combinations. The tasks in each step are independent and time-consuming, so there is no doubt that parallel computing is a great method to save our time.
 
 Since we are not very proficient in CNN, there might be some details in model design that can be improved. However, we still think this is a wonderful practice for us to get familiar with CHTC and parallel computing.
 
-\newpage
 
 # Reference
 
-1. Hutter F, Hoos H, Leyton-Brown K. An efficient approach for assessing hyperparameter importance[C]//International conference on machine learning. PMLR, 2014: 754-762.
+1. CHTC Official Website: Running Python Jobs on CHTC: https://chtc.cs.wisc.edu/python-jobs.shtml
 
-2. Aszemi N M, Dominic P D D. Hyperparameter Optimization in Convolutional Neural Network using Genetic Algorithms[J].
+2. Hutter F, Hoos H, Leyton-Brown K. An efficient approach for assessing hyperparameter importance[C]. International conference on machine learning. PMLR, 2014: 754-762.
 
-3. CHTC Official Website: Running Python Jobs on CHTC: https://chtc.cs.wisc.edu/python-jobs.shtml
+3. Aszemi N M, Dominic P D D. Hyperparameter Optimization in Convolutional Neural Network using Genetic Algorithms[J].
 
